# nextjs-projects

./: README.md
Next.js-AI-Tutorials/: cypress_testing_guide.md  next.config.ts  package-lock.json  package.json
Next.js-AI-Tutorials/src/app/api/api-tool/: route.ts
Next.js-AI-Tutorials/src/app/api/chat/: route.ts
Next.js-AI-Tutorials/src/app/api/client-side-tools/: route.ts
Next.js-AI-Tutorials/src/app/api/completion/: route.ts
Next.js-AI-Tutorials/src/app/api/embeddings/: route.ts
Next.js-AI-Tutorials/src/app/api/generate-image/: route.ts
Next.js-AI-Tutorials/src/app/api/generate-image-tool/: route.ts
Next.js-AI-Tutorials/src/app/api/generate-speech/: route.ts
Next.js-AI-Tutorials/src/app/api/mcp-tools/: route.ts
Next.js-AI-Tutorials/src/app/test/: page.tsx
Next.js-AI-Tutorials/src/lib/: anthropic.ts  openai.ts
Nextjs-Demo-App/: .gitignore  package-lock.json  package.json
Nextjs-Demo-App/src/context/: AuthContext.ts
Nextjs-Demo-App/src/firebase/: config.ts
Nextjs-Demo-App/src/firebase/auth/: signup.ts
Nextjs-Demo-App/src/lib/: mockDb.ts
Nextjs-Demo-App/src/pages/: index.tsx
Nextjs-Demo-App/src/pages/signin/: page.tsx
Nextjs-Demo-App/src/pages/signup/: page.tsx
Nextjs-Demo-App/src/pages/tasks/: index.tsx
Real-Rag/: .gitignore  README.md
Real-Rag/backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
Real-Rag/frontend/: package-lock.json  package.json
Real-Rag/frontend/src/app/: globals.css  layout.tsx  page.tsx
Real-Rag/frontend/src/components/: SessionWrapper.tsx
(+43 files in other folders)
